--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="particles-js">
       <div class="header">
         <h1>
-          <span class="site-title">NAGENDRA BRIJESH DWIVEDI</span>
+          <span class="site-title">ANKIT BRIJESH DWIVEDI</span>
           <span class="site-description">Programmer • Web Developer </span>
         </h1>
         <div class="header-icons">
