--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
             
           </div>
           <p style="text-align: justify">
-            I developed and designed a Ecommerce  website using NextJS, ReactJs, Sanity and Stripe  hosted on vercel, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            It is a fully responsive modern full stack E-commerce application with Payment functionality.
           </p>
           <a class="project-link" target="_blank" href="https://ecommerce-website-pi.vercel.app/">Check it out!</a>
         </div>
@@ -203,9 +201,7 @@
           &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           <p style="text-align: justify">
-            I developed and designed a Weather website using  ReactJs hosted on vercel, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I developed and design a fully responsive PWA Weather website in React JS.
           </p>
           <a class="project-link" target="_blank" href="https://weather-site-ruby.vercel.app/"
             >Check it out!</a
@@ -232,9 +228,7 @@
             />
           </div>
           <p style="text-align: justify">
-            I developed and designed a Modern Ui/Ux website using  ReactJs hosted on vercel, to showcase my web
-            presence, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I developed and design a fully responsive website in modern UI/UX in React JS.
           </p>
           <a class="project-link" target="_blank" href="https://modern-ui-ux-gpt3.vercel.app/">
             Check it out!
@@ -265,7 +259,7 @@
             />
           </div>
           <p style="text-align: justify">
-           I developed and designed a University Management System Using Core Java and MySql.
+            It is a desktop application which is built in Core Java as front-end and MySql as back-end.
           </p>
           <a class="project-link" target="_blank" href="https://github.com/nagendra376/university-data-management">
             Check it out!
