--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@
               src="https://unpkg.com/simple-icons@3.4.0/icons/javascript.svg"
               style="filter: invert(96%) sepia(47%) saturate(4151%) hue-rotate(338deg) brightness(100%) contrast(95%)"
             />
+
+            <img
+            height="32"
+            width="32"
+            src="https://unpkg.com/simple-icons@3.4.0/icons/react.svg"
+            style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
+          />
           </div>
           <p style="text-align: justify">
             I developed and design a fully responsive website in modern UI/UX in React JS.
@@ -254,7 +261,7 @@
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/cplusplus.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"
               style="filter: invert(22%) sepia(77%) saturate(1486%) hue-rotate(183deg) brightness(101%) contrast(103%)"
             />
           </div>
